--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -6,9 +6,9 @@ html {
 
 body {
     padding-top: 70px; /* Height of fixed navbar */
-    margin-bottom: 70px; /* Margin bottom by footer height */
+    /* margin-bottom: 70px; /* Margin bottom by footer height */ */
     /* min-height: 100vh; */
-    background-color: #EBEBEB;
+    background-color: #EBEBEB !important;
     max-width: 100vw;
 }
 
@@ -17,7 +17,7 @@ body {
 }
 
 .content {
-    padding: 10px 50px 30px 50px;
+  background-color: #EBEBEB !important;
 }
 
 footer {
