--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -7,12 +7,11 @@
       <a class="navbar-brand logo" href="/">
           <img src="{% static 'base/img/logo-orange-small.png' %}" width="30" height="30" alt="tCF">
       </a>
+      <div class="navbar-collapse collapse">
       <a class="navbar-brand" href="/">theCourseForum</a>
-      <button class="navbar-toggler" type="button" id="menu-toggle">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      </div>
         <!-- search not in navbar collapse -->
-      <form class="mx-4 my-auto w-100 d-inline-block order-1" action="/search" method="get">
+      <form class="mx-2 my-auto w-100 d-inline-block order-1" action="/search" method="get">
           <div class="input-group">
               <input type="search" class="form-control border border-right-0"
                      placeholder="Search..." aria-label="Search" name="q">
@@ -25,35 +24,32 @@
       </form>
     </div>
 
-    <button class="navbar-toggler order-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler order-0 ml-4" type="button" id="menu-toggle"
+      aria-controls="wrapper" aria-expanded="false" aria-label="Toggle sidebar">
+      <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse flex-shrink-1 flex-grow-0 order-last" 
+    <div class="account ml-4 flex-shrink-1 flex-grow-0 order-last"
          id="navbarSupportedContent">
-      <ul class="navbar-nav">
-          <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'about' %}">About</a>
-          </li>
-          {% if user.is_authenticated %}
-          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Hi, {{user.first_name}}
-              </a>
-              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-              </div>
-          </li>
-          {% else %}
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Sign In</a>
-          </li>
-          {% endif %}
-      </ul>
-
+       <ul class="navbar-nav flex-shrink-1 flex-grow-0 order-last">
+           {% if user.is_authenticated %}
+           <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                   Hi, {{user.first_name}}
+               </a>
+               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+                 <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+               </div>
+           </li>
+           {% else %}
+           <li class="nav-item">
+               <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+           </li>
+           {% endif %}
+       </ul>
     </div>
   </nav>
 </header>
