--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -6,7 +6,7 @@ html {
 
 body {
     padding-top: 70px; /* Height of fixed navbar */
-    margin-bottom: 70px; /* Margin bottom by footer height */
+    margin-bottom: 90px; /* Margin bottom by footer height */
     /* min-height: 100vh; */
     background-color: #EBEBEB;
     max-width: 100vw;
@@ -20,18 +20,8 @@ body {
     padding: 10px 50px 30px 50px;
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 70px; /* Set the fixed height of the footer here */
-    line-height: 30px; /* Vertically center the text there */
-    /* background-color: #f5f5f5; */
-    text-align: center;
-}
-
 a {
-    color: black;
+    color: inherit;
 }
 a:hover {
     text-decoration: none;
@@ -41,4 +31,21 @@ a:hover {
 ul {
     padding: 0;
     list-style-type: none;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 80px; /* Set the fixed height of the footer here */
+    line-height: 30px; /* Vertically center the text there */
+    /* background-color: #f5f5f5; */
+    text-align: center;
+    color: #EBEBEB;
+    background-color: #172248;
+    padding-top: 15px;
+}
+
+footer > .row {
+    background-color: #172248;
 }
