--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -24,7 +24,7 @@
     </div>
     <footer class="container-fluid">
         <div class="row">
-            <div class="col-lg-12 text-center" style="color: black;">
+            <div class="col col-lg-12 text-center">
                 <a href="{% url 'privacy' %}">Privacy</a> |
                 <a href="{% url 'terms' %}">Terms</a> |
                 theCourseForum &copy; {{ LATEST_SEMESTER.year }}
