--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -1,30 +1,44 @@
 {% load static %}
 
 <!-- Sidebar -->
-<div class="bg-light border-secondary border-right
+<div class="border-right
 d-flex align-items-end flex-column" id="sidebar-wrapper">
   <div class="list-group list-group-flush mb-auto">
-    <!-- Dashboard for saved courses, enrollment dates, major-specific info, etc -->
-    <a href="{% url 'browse' %}"
-       class="list-group-item list-group-item-action bg-light">
+    <!-- TODO: dashboard for saved courses, enrollment dates, major-specific info, etc -->
+    <!-- <a href="{% url 'browse' %}"
+       class="list-group-item list-group-item-action">
        <i class="fa fa-star-o fa-fw"></i>&nbsp; Dashboard
-    </a>
+    </a> -->
     <a href="{% url 'browse' %}"
-       class="list-group-item list-group-item-action bg-light
+       class="list-group-item list-group-item-action
        {% if request.resolver_match.url_name == 'browse' %}active{% endif %}">
        <i class="fa fa-th-large fa-fw"></i>&nbsp; Browse Courses
     </a>
     <a href="{% url 'new_review' %}"
-       class="list-group-item list-group-item-action bg-light
+       class="list-group-item list-group-item-action
        {% if request.resolver_match.url_name == 'new_review' %}active{% endif %}">
       <i class="fa fa-pencil-square-o fa-fw"></i>&nbsp; Write Review
     </a>
     <a href="{% url 'about' %}"
-       class="list-group-item list-group-item-action bg-light
+       class="list-group-item list-group-item-action
        {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
       <i class="fa fa-code fa-fw"></i>&nbsp; About
     </a>
+    {% if user.is_authenticated %}
+           <div class="d-sm-none list-group-item dropdown">
+               <div class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fa fa-user fa-fw"></i>&nbsp; Hi, {{user.first_name}}
+               </div>
+               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+                 <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+               </div>
+              </div>
+           {% endif %}
   </div>
+  
   <div class="footer mt-auto w-100 text-center">
     <a href="{% url 'privacy' %}">Privacy</a> |
     <a href="{% url 'terms' %}">Terms</a>
