--- a/tcf_website/static/base/simple-sidebar.css
+++ b/tcf_website/static/base/simple-sidebar.css
@@ -8,7 +8,7 @@ body {
 }
 
 #sidebar-wrapper {
-  height: 100vh;
+  height: calc(100vh - 70px); /* Subtract height of navbar */
   margin-left: -15rem;
   -webkit-transition: margin .25s ease-out;
   -moz-transition: margin .25s ease-out;
@@ -30,7 +30,7 @@ body {
   margin-top: 2.5rem;
 }
 
-#sidebar-wrapper .list-group-item {
+#sidebar-wrapper .list-group-item, .footer, .footer a {
   background-color: rgb(23, 34, 72);
   color: gray;
 }
@@ -65,6 +65,3 @@ body {
   }
 }
 
-.footer, .footer a {
-  color: gray;
-}
