--- a/tcf_website/templates/base/sidebar.html
+++ b/tcf_website/templates/base/sidebar.html
@@ -2,8 +2,8 @@
 
 <!-- Sidebar -->
 <div class="border-right
-d-flex align-items-end flex-column" id="sidebar-wrapper">
-  <div class="list-group list-group-flush mb-auto">
+d-flex flex-column justify-content-between" id="sidebar-wrapper">
+  <div class="list-group list-group-flush">
     <!-- TODO: dashboard for saved courses, enrollment dates, major-specific info, etc -->
     <!-- <a href="{% url 'browse' %}"
        class="list-group-item list-group-item-action">
@@ -25,21 +25,22 @@ d-flex align-items-end flex-column" id="sidebar-wrapper">
       <i class="fa fa-code fa-fw"></i>&nbsp; About
     </a>
     {% if user.is_authenticated %}
-           <div class="d-sm-none list-group-item dropdown">
-               <div class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-user fa-fw"></i>&nbsp; Hi, {{user.first_name}}
-               </div>
-               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                 <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-                 <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
-                 <div class="dropdown-divider"></div>
-                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-               </div>
-              </div>
-           {% endif %}
+      <!-- KEEP IN SYNC WITH navbar.html -->
+      <div class="d-sm-none list-group-item dropdown">
+        <div class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="fa fa-user fa-fw"></i>&nbsp; Hi, {{user.first_name}}
+        </div>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+          <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+        </div>
+      </div>
+    {% endif %}
   </div>
   
-  <div class="footer mt-auto w-100 text-center">
+  <div class="footer text-center">
     <a href="{% url 'privacy' %}">Privacy</a> |
     <a href="{% url 'terms' %}">Terms</a>
     <h6>theCourseForum &copy; {{ LATEST_SEMESTER.year }}</h6>
