--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -1,3 +1,24 @@
+/* 
+
+Responsive breakpoints:
+
+// xs: Extra small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// sm: Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+// md: Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// l: Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// xl: Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+*/
+
 html {
     position: relative;
     min-height: 100%;
@@ -14,6 +35,12 @@ body {
 
 .navbar {
     max-width: 100vw;
+}
+
+@media (min-width: 576px) {
+    .navbar .search {
+        width: 100%;
+    }
 }
 
 .content {
