--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -3,7 +3,7 @@
 <header>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-3">
     <!-- Main logo, search bar, collapse nav items -->
-    <div class="d-flex flex-grow-1">
+    <div class="d-flex flex-grow-1 logo-search">
       <a class="navbar-brand logo" href="/">
           <img src="{% static 'base/img/logo-orange-small.png' %}" width="30" height="30" alt="tCF">
       </a>
