--- a/tcf_website/static/base/base.css
+++ b/tcf_website/static/base/base.css
@@ -1,3 +1,24 @@
+/* 
+
+Responsive breakpoints:
+
+// xs: Extra small devices (portrait phones, less than 576px)
+// No media query for `xs` since this is the default in Bootstrap
+
+// sm: Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { ... }
+
+// md: Medium devices (tablets, 768px and up)
+@media (min-width: 768px) { ... }
+
+// l: Large devices (desktops, 992px and up)
+@media (min-width: 992px) { ... }
+
+// xl: Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) { ... }
+
+*/
+
 html {
     position: relative;
     min-height: 100%;
@@ -6,18 +27,41 @@ html {
 
 body {
     padding-top: 70px; /* Height of fixed navbar */
-    margin-bottom: 90px; /* Margin bottom by footer height */
-    /* min-height: 100vh; */
     background-color: #EBEBEB;
     max-width: 100vw;
 }
 
 .navbar {
     max-width: 100vw;
+    height: 70px;
+}
+
+.navbar .logo-search {
+    width: 100px;
+    margin-right: 1rem;
+}
+
+@media (min-width: 400px) {
+    .navbar .logo-search {
+        width: auto;
+    }
+}
+
+@media (min-width: 576px) {
+    .navbar .search {
+        width: 100%;
+    }
 }
 
 .content {
-    padding: 10px 50px 30px 50px;
+  background-color: #EBEBEB;
+}
+
+@media (min-width: 768px) {
+    .content {
+        width: calc(100vw - 240px);
+        margin-left: 240px;
+    }
 }
 
 a {
