--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -1,57 +1,56 @@
 {% load static %}
 
 <header>
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-3">
+    <!-- Main logo, search bar, collapse nav items -->
+    <div class="d-flex flex-grow-1 logo-search">
+      <a class="navbar-brand logo" href="/">
+          <img src="{% static 'base/img/logo-orange-small.png' %}" width="30" height="30" alt="tCF">
+      </a>
+      <div class="navbar-collapse collapse">
+      <a class="navbar-brand" href="/">theCourseForum</a>
+      </div>
+        <!-- search not in navbar collapse -->
+      <form class="search d-inline-block mx-md-2 my-auto order-1" action="/search" method="get">
+          <div class="input-group">
+              <input type="search" class="form-control border border-right-0"
+                     placeholder="Search..." aria-label="Search" name="q">
+              <div class="input-group-append">
+                  <button class="btn btn-outline-primary border border-left-0" type="submit">
+                      <i class="fa fa-search" aria-hidden="true"></i>
+                  </button>
+              </div>
+          </div>
+      </form>
+    </div>
 
-    <a class="navbar-brand logo" href="/">
-        <img src="{% static 'base/img/logo-orange-small.png' %}" width="30" height="30" alt="tCF">
-    </a>
-
-    <a class="navbar-brand" href="/">theCourseForum</a>
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler d-md-none order-0 ml-sm-4" type="button" id="menu-toggle"
+      aria-controls="wrapper" aria-expanded="false" aria-label="Toggle sidebar">
+      <span class="navbar-toggler-icon"></span>
     </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item {% if request.resolver_match.url_name == 'browse' %}active{% endif %}">
-          <a class="nav-link" href="{% url 'browse' %}">Courses</a>
-        </li>
-        <li class="nav-item {% if request.resolver_match.url_name == 'new_review' %}active{% endif %}">
-            <a class="nav-link" href="{% url 'new_review' %}">Review</a>
-        </li>
-      </ul>
 
-    <form class="form-inline ml-auto mr-md-2" action="/search" method="get">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q">
-      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-    </form>
-
-    <ul class="navbar-nav">
-        <li class="nav-item {% if request.resolver_match.url_name == 'about' %}active{% endif %}">
-          <a class="nav-link" href="{% url 'about' %}">About</a>
-        </li>
-        {% if user.is_authenticated %}
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Hi, {{user.first_name}}
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-              <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-            </div>
-        </li>
-        {% else %}
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'login' %}">Sign In</a>
-        </li>
-        {% endif %}
-    </ul>
-    
-
+    <div class="account d-none d-sm-inline-block ml-4 flex-shrink-1 flex-grow-0 order-last"
+         id="navbarSupportedContent">
+       <ul class="navbar-nav flex-shrink-1 flex-grow-0 order-last">
+           {% if user.is_authenticated %}
+           <!-- KEEP IN SYNC WITH sidebar.html -->
+           <li class="nav-item dropdown">
+               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                   Hi, {{user.first_name}}
+               </a>
+               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                 <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+                 <a class="dropdown-item" href="{% url 'reviews' %}">My reviews</a>
+                 <div class="dropdown-divider"></div>
+                 <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+               </div>
+           </li>
+           {% else %}
+           <li class="nav-item">
+               <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+           </li>
+           {% endif %}
+       </ul>
     </div>
   </nav>
 </header>
