Add review aggregation scores.

--- a/tcf_website/templates/common/rating_card.html
+++ b/tcf_website/templates/common/rating_card.html
@@ -12,20 +12,40 @@
         <div class="card-body">
           <div class="row justify-content-between text-center text-md-left">
               <div class="col-4 col-lg-2">
-                <p class="mb-0">Rating</p>
-                <p class="mb-0">TODO</p>
+                <small class="mb-0 text-muted text-uppercase">
+                  <i class="fa fa-star fa-fw"></i>&nbsp;Rating
+                </small>
+                <p class="mb-0 info">
+                  {% if rating %}
+                    {{ rating|floatformat:2 }}
+                  {% else %}
+                    &mdash;
+                  {% endif %}
+                </p>
               </div> 
               <div class="col-4 col-lg-2">
-                <p class="mb-0">Difficulty</p>
-                <p class="mb-0">TODO</p>
+                <small class="mb-0 text-muted text-uppercase">
+                  <i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;Difficulty
+                </small>
+                <p class="mb-0 info">
+                  {% if difficulty %}
+                    {{ difficulty|floatformat:2 }}
+                  {% else %}
+                    &mdash;
+                  {% endif %}
+                </p>
               </div>
               <div class="col-4 col-lg-2">
-                <p class="mb-0">GPA</p>
-                <p class="mb-0" id="{{prefix}}{{pk}}Grade">TODO</p>
+                <small class="mb-0 text-muted text-uppercase">
+                  <i class="fas fa-chart-bar"></i>&nbsp;GPA
+                </small>
+                <p class="mb-0 info">TODO</p>
               </div>
               <div class="col-12 col-lg-3 offset-lg-3" {% if not last_taught %}style="opacity: 0;"{% endif %}>
-                  <p class="mb-0">Last taught</p>
-                  <p class="mb-0">{{ last_taught }}</p>
+                <small class="mb-0 text-muted text-uppercase">
+                  Last Taught
+                </small>
+                  <p class="mb-0 info">{{ last_taught }}</p>
               </div>
           </div>
           {% if content %}
