--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -22,7 +22,7 @@
                 {% for c in sd.recent_courses|dictsort:"number" %}
                     <li class="{% if not c.is_recent %}old{% endif %}">
                         {% url 'course' course_id=c.pk as link %}
-                        {% include "common/rating_card.html" with title=c.code subtitle=c.title link=link last_taught=c.semester_last_taught content=c.description prefix='course' pk=c.pk %}
+                        {% include "common/rating_card.html" with title=c.code subtitle=c.title link=link rating=c.average_rating difficulty=c.average_difficulty last_taught=c.semester_last_taught content=c.description prefix='course' pk=c.pk %}
                     </li>
                 {% endfor %}
             </ul>
