--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -16,20 +16,24 @@
                     <div class="d-flex justify-content-between align-items-end">
                         <div class="d-flex">
                             <div class="ml-2">
-                                <strong><p>{{ r.average|floatformat:2 }}</p></strong>
+                                <strong>
+                                    <p>
+                                        <i class="fa fa-star fa-fw"></i>&nbsp;{{ r.average|floatformat:2 }}
+                                    </p>
+                                </strong>
                             </div>
-                            <div class="ml-4">
+                            <div class="ml-4 text-muted">
                                 <i class="fa fa-user fa-fw"></i>&nbsp;{{ r.instructor_rating }}
                             </div>
-                            <div class="ml-4">
-                                <i class="fa fa-exclamation-triangle fa-fw"></i>&nbsp;
+                            <div class="ml-4 text-muted">
+                                <i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;
                                 {{ r.difficulty }}
                             </div>
-                            <div class="ml-4">
+                            <div class="ml-4 text-muted">
                                 <i class="fa fa-thumbs-up fa-fw"></i>&nbsp;
                                 {{ r.recommendability }}
                             </div>
-                            <div class="ml-4">
+                            <div class="ml-4 text-muted">
                                 <i class="fa fa-hourglass-half fa-fw"></i>&nbsp;
                                 {{ r.hours_per_week }}
                             </div>
