--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>theCourseForum</title>
+    <link rel="icon" 
+      type="image/png" 
+      href="{% static 'base/img/logo-orange-small.png' %}">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'base/bootstrap.min.css' %}" />
