Add review aggregation scores. (#23)
* Add review aggregation scores.

* Add tests.

* Add conditional rendering

* Prettify Profile

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'base/bootstrap.min.css' %}" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/ed3998fccc.js" crossorigin="anonymous"></script>
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="{% static 'base/simple-sidebar.css'%}">
