--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -3,6 +3,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'common/toolbar.css' %}" />
+<link rel="stylesheet" href="{% static 'course/course_professor.css' %}" />
 {% endblock %}
 
 {% block content %}
@@ -10,12 +11,45 @@
 
     {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
-    <div class="d-flex flex-column align-items-center my-3 my-md-5">
+    <div class="d-flex flex-column align-items-center my-3 mt-md-5">
         <h1>{{ instructor.full_name }}</h1>
         <div class="d-md-flex">
             <h4 class="mr-md-3">{{ course.code }}</h4>
             <h4 class="mr-md-3">{{ course.title }}</h4>
         </div>
+    </div>
+
+    <div class="ratings row d-flex mb-3 justify-content-center">
+        {% if rating %}
+        <div class="card col-lg-3 text-center">
+            <div class="card-body">
+              <h5 class="card-title display-4">
+                  {{ rating|floatformat:2 }}
+              </h5>
+              <p class="card-text"><i class="fa fa-star fa-fw"></i>&nbsp;Rating</p>
+            </div>
+        </div>
+        {% endif %}
+        {% if difficulty %}
+        <div class="card mx-2 col-lg-3 text-center">
+            <div class="card-body">
+              <h5 class="card-title display-4">
+                  {{ difficulty|floatformat:2 }}
+              </h5>
+              <p class="card-text"><i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;Difficulty</p>
+            </div>
+        </div>
+        {% endif %}
+        {% if hours %}
+        <div class="card col-lg-3 text-center">
+            <div class="card-body">
+              <h5 class="card-title display-4">
+                  {{ hours|floatformat:2 }}
+              </h5>
+              <p class="card-text"><i class="fa fa-hourglass-half fa-fw"></i>&nbsp;Hours/Week</p>
+            </div>
+        </div>
+        {% endif %}
     </div>
 
     {% include "reviews/reviews.html" with reviews=reviews %}
