--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -53,6 +53,10 @@
         $("#wrapper").toggleClass("toggled");
       });
     </script>
+
+    <!-- Turbolinks -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.2.0/turbolinks.js"></script>
+    
     {% block js %}
     {% endblock %}
 </body>
