--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -2,41 +2,119 @@
 {% load static %}
 
 {% block styles %}
+<style>
+  .pfp {
+      overflow: hidden;
+  }
+  .pfp img{
+      transition: all 0.5s ease;
+  }
+  .pfp:hover img{
+      transform: scale(1.1);
+  }
+  .member:hover{
+      box-shadow: 2px 2px 5px #888888 !important;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
 <div class="browse container">
-    <h2>theCourseForum</h2>
-    <h6>connecting you to the courses you love.</h6>
-    <p>theCourseForum is a product of the UVa community and the students that manage the site, where UVa students can share their experiences about the classes they've taken. We aim to make the task of choosing your classes as easy as possible by providing distributions of past grades for the classes along with reviews by your fellow students. It's all run by students, for students, in order to make your academic experience at UVa the best it can be. Students themselves have the ability to leave an impact on the community by sharing their own individual experiences.
+  <section class="about jumbotron bg-light">
+    <h2 class="display-4">theCourseForum</h2>
+    <h6 class="lead">connecting you to the courses you love.</h6>
+    <hr/>
+    <p><strong>theCourseForum</strong> is a product of developers and contributors from the UVA
+    community, where students can share their academic experiences.
+    classes they've taken. We provide past grade distributions along with
+    student reviews for courses in all departments. Gain insight on which
+    professors to choose and discover whether a class is worth a spot in your
+    ideal schedule. We'll connect you to courses you'll love, and make
+    enrollment stress free.
     </p>
-    <img class="container-fluid" src="{% static 'about/banner_uva.jpg' %}"/>
-    <div class="row mt-3">
-        <div class="col">
-            <h5>Beginnings</h5>
-            <p>
-                In Fall 2005, UVa students Jeff Bordogna and Alan Webb recognized a need for an online community to help students share their class experiences, and thus developed the first version of theCourseForum. Over time, this simple tool grew and prospered as more and more students found it despite our extraordinarily small marketing budget. The site has now become a fixture of the UVA course signup season to the extent that over 80% of students use the site every year. Starting in 2012, a small elite team of skilled individuals worked to redesign the site to bring it into the modern age. After a long year of work, the new site was released, and it continues to be managed by UVa students.
-            </p>
-            <p>
-                Although this organization has members who are University of Virginia students and may have University employees associated or engaged in its activities and affairs, the organization is not a part of or an agency of the University. It is a separate and independent organization, which is responsible for and manages its own activities and affairs. The University does not direct, supervise or control the organization and is not responsible for the organization’s contracts, acts or omissions.
-            </p>
+    <h5>What can you do?</h5>
+    <p> The biggest thing you can do: Submit reviews! While the website is
+        spectacular, what really makes theCourseForum is the sharing of
+        individual, personal experiences from UVA students. Write a review today
+        to leave an impact on your community.
+    </p>
+    <p> Our student-run development team is always recruiting for more
+        web developers, designers, and marketing team members! If that's you,
+        contact us at support@thecourseforum.com — experience not required.
+    </p>
+  </section>
+
+  <div class="team text-center">
+    <h1>Meet Our Team</h1>
+
+    <div class="executive-team jumbotron py-5 bg-light">
+      <div class="container">
+        <h3>Executive Team</h3>
+        <hr/>
+        <div class="row text-left">
+          {% for member in executive_team %}
+            <div class="col-lg-4 col-sm-6 d-flex">
+              <div class="member card mb-4 shadow-sm flex-fill">
+                <div class="pfp">
+                  <img class="card-img-top" src="{% static 'about/team-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-text">{{ member.name }}</h5>
+                  <p class="card-text">{{ member.role }}</p>
+                  <p class="card-text">Class of {{ member.class }}</p>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
         </div>
-        <div class="col">
-            <h5>
-                What can you do?
-            </h5>
-            <p>
-                The biggest thing you can do:  submit reviews. While the framework of the site is spectacular, what really makes theCourseForum is the reviews submitted by students. If that isn't enough, our team is always looking for more people interested in website design and data analytics. If that's you, contact us at support@thecourseforum.com; experience not required.
-            </p>
-            <img src="{% static 'about/parents_fund.png' %}"/>
-            <h5>
-                Thanks to the UVA Parents Fund!
-            </h5>
-            <p>
-                The UVA Parents Fund helps us cover server costs from the large amount of traffic that we get. Their help has allowed the site to stay up and running continuously as we keep developing new features.
-            </p>
-        </div>
+      </div>
     </div>
+
+    <div class="executive-team jumbotron py-5 bg-light">
+      <div class="container">
+        <h3>Engineering Team</h3>
+        <hr/>
+        <div class="row text-left">
+          {% for member in engineering_team %}
+            <div class="col-lg-3 col-sm-6 d-flex">
+              <div class="member card mb-4 shadow-sm flex-fill">
+                <div class="pfp">
+                  <img class="card-img-top" src="{% static 'about/team-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-text">{{ member.name }}</h5>
+                  <p class="card-text">Class of {{ member.class }}</p>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+    <div class="marketing-team jumbotron py-5 bg-light">
+      <div class="container">
+        <h3>Marketing & Design Team</h3>
+        <hr/>
+        <div class="row text-left">
+          {% for member in marketing_team %}
+            <div class="col-lg-3 col-sm-6 d-flex">
+              <div class="member card mb-4 shadow-sm flex-fill">
+                <div class="pfp">
+                  <img class="card-img-top" src="{% static 'about/team-pfps/'|add:member.img_filename %}" alt="{{ member.name }}">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-text">{{ member.name }}</h5>
+                  <p class="card-text">Class of {{ member.class }}</p>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
 
 
