Fix about page.

--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -25,7 +25,7 @@
     <h6 class="lead">connecting you to the courses you love.</h6>
     <hr/>
     <p><strong>theCourseForum</strong> is a product of developers and contributors from the UVA
-    community, where students can share their academic experiences.
+    community. It's a place where students can share their academic experiences of
     classes they've taken. We provide past grade distributions along with
     student reviews for courses in all departments. Gain insight on which
     professors to choose and discover whether a class is worth a spot in your
@@ -35,7 +35,7 @@
     <h5>What can you do?</h5>
     <p> The biggest thing you can do: Submit reviews! While the website is
         spectacular, what really makes theCourseForum is the sharing of
-        individual, personal experiences from UVA students. Write a review today
+        individual, personal experiences from UVA students. <a href="{% url 'new_review' %}" style="color: dodgerblue;">Write a review</a> today
         to leave an impact on your community.
     </p>
     <p> Our student-run development team is always recruiting for more
