Tweak about page.

--- a/tcf_website/templates/reviews/reviews.html
+++ b/tcf_website/templates/reviews/reviews.html
@@ -8,7 +8,7 @@
                 <div class="card-body text-left">
                     {% if profile %}
                     <div class="d-flex justify-content-between">
-                        <p>{{ r.instructor.full_name }} - {{ r.course }}</p>
+                        <p><strong>{{ r.instructor.full_name }} - {{ r.course }}</strong></p>
                         <a href="#">Edit</a>
                     </div>
                     {% endif %}
