--- a/tcf_website/templates/common/rating_card.html
+++ b/tcf_website/templates/common/rating_card.html
@@ -11,7 +11,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <div class="row justify-content-between text-center text-md-left">
-              <div class="col-4 col-lg-2">
+              <div class="col-4 col-lg-2 text-nowrap">
                 <small class="mb-0 text-muted text-uppercase">
                   <i class="fa fa-star fa-fw"></i>&nbsp;Rating
                 </small>
@@ -23,7 +23,7 @@
                   {% endif %}
                 </p>
               </div> 
-              <div class="col-4 col-lg-2">
+              <div class="col-4 col-lg-2 text-nowrap">
                 <small class="mb-0 text-muted text-uppercase">
                   <i class="fa fa-skull-crossbones fa-fw"></i>&nbsp;Difficulty
                 </small>
@@ -35,7 +35,7 @@
                   {% endif %}
                 </p>
               </div>
-              <div class="col-4 col-lg-2">
+              <div class="col-4 col-lg-2 text-nowrap">
                 <small class="mb-0 text-muted text-uppercase">
                   <i class="fas fa-chart-bar"></i>&nbsp;GPA
                 </small>
