Migrate votes and add voting feature.

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -4,6 +4,7 @@
 {% block styles %}
 <link rel="stylesheet" href="{% static 'common/toolbar.css' %}" />
 <link rel="stylesheet" href="{% static 'course/course_professor.css' %}" />
+<link rel="stylesheet" href="{% static 'reviews/review.css' %}" />
 {% endblock %}
 
 {% block content %}
@@ -58,4 +59,5 @@
 
 
 {% block js %}
+<script src="{% static 'reviews/review.js' %}"></script>
 {% endblock %}
