--- a/tcf_website/templates/reviews/user_reviews.html
+++ b/tcf_website/templates/reviews/user_reviews.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="browse container-fluid">
     <h2>My reviews</h2>
-    {% include "reviews/reviews.html" with reviews=user.review_set.all profile=True %}
+    {% include "reviews/reviews.html" with reviews=user.reviews profile=True %}
 </div>
 {% endblock %}
 
