elastic querying works

--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -8,6 +8,19 @@
 
 <div class="container">
 
+    {{ query }}
+
+</div>
+
+<div class="container">
+
+    {{ courses }}
+
+</div>
+<div class="container">
+
+    {{ instructors }}
+
 </div>
 
 {% endblock %}
