removed small detail

--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -23,7 +23,7 @@
 
 <hr>
 
-<div class="instructor container">
+<div class="container">
     <h4>Instructors</h4>
     {% for i in instructors %}
         <li>
