--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -6,31 +6,34 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <h1>Search: {{query}}</h1>
+<div class="search container">
+
+    <div class="container">
+        <h1>Search: {{query}}</h1>
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <h4>Courses</h4>
+        {% for c in courses %}
+            <li>
+                <a href="{% url 'course' course_id=c.id %}">{{c.title}} - {{c.mnemonic}}</a>
+            </li>
+        {% endfor %}
+    </div>
+
+    <hr>
+
+    <div class="container">
+        <h4>Instructors</h4>
+        {% for i in instructors %}
+            <li>
+                <!-- TODO: create instructor page route -->
+                {{i.first_name}} {{i.last_name}}
+            </li>
+        {% endfor %}
+    </div>
+
 </div>
-
-<hr>
-
-<div class="container">
-    <h4>Courses</h4>
-    {% for c in courses %}
-        <li>
-            <a href="{% url 'course' course_id=c.id %}">{{c.title}} - {{c.number}}</a>
-        </li>
-    {% endfor %}
-</div>
-
-<hr>
-
-<div class="container">
-    <h4>Instructors</h4>
-    {% for i in instructors %}
-        <li>
-            <!-- TODO: create instructor page route -->
-            {{i.first_name}} {{i.last_name}}
-        </li>
-    {% endfor %}
-</div>
-
 {% endblock %}
